OO-3315: refactor the UI rules with some classic boolean logic